update final model and webapp

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,19 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
+					<img src="static/images/wine-img.png" alt="" style="opacity:0.4;filter:alpha(opacity=40);"/>
 					<h1>Wine Style</h1>
 					<p>offering suggestions that fit your taste</p>
 				</header>
 				<footer>
 					<a href="#bybottle" class="button style2 scrolly" style="margin-right: 15px">Choose A Bottle</a>
-					<a href="#bydescription" class="button style2 scrolly" style="margin-left: 15px">Describe Flavors</a>
+					<a href="#bydescription" class="button style2 scrolly" style="margin-left: 15px">Describe By Taste</a>
 				</footer>
 			</section>
 
 			<!-- Banner -->
-			<section id="banner">
+
+		  <section id="banner">
 				<header>
 					<h2></h2>
 				</header>
@@ -58,14 +60,14 @@
 
 		<!-- Feature 2 -->
 			<article id="bydescription" class="container box style1 right">
-				<a href="#" class="image fit"><img src="static/images/pic02.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="static/images/brooke-lark-200721.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Describe<br />
 						what you like</h2>
 					</header>
 					<p>Try something like: <br />
-						I enjoy wines with flavors of cherry, oak, and nuttiness<br />
+						I enjoy dry red wines with a full body. With notes of cherry and oak.<br />
 					</p>
 						<textarea id="user_input",
 											rows="3", cols="30"></textarea>
@@ -93,10 +95,24 @@
 							</tr>
 						</tbody>
 					</table>
-				</div>
+					<footer>
+					</footer>
 			</article>
 
+			<!-- Banner -->
+			<article id="other">
+			</article>
 
+			<section id="banner">
+				<header>
+					<p><center>Not what you want? Try Again! </center> </p>
+					<a href="#bybottle" class="button style2 scrolly" style="margin-right: 15px">By Bottle</a>
+					<a href="#bydescription" class="button style2 scrolly" style="margin-left: 15px">By Taste</a>
+				</header>
+				<p></p>
+				<footer>
+				</footer>
+			</section>
 
 		<!-- Portfolio [Not in Use]-->
 <!--
@@ -407,7 +423,6 @@
 			});
 
 			</script>
-
 
 	</body>
 </html>
